name:                Taiji-types
version:             0.1.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2017 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Taiji.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , binary
                     , binary-orphans
                     , bio-experiments
                     , bio-pipelines
                     , bioinformatics-toolkit
                     , bytestring
                     , case-insensitive
                     , containers
                     , data-default-class
                     , text
                     , vector
                     , vector-binary-instances
                     , matrices
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Taiji-types
